changes added by tejaswini

--- a/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
+++ b/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
@@ -163,7 +163,7 @@
         <span class="menu-arrow"></span>
       </span>
       <div class="menu-sub menu-sub-accordion" routerLinkActive="menu-active-bg">
-        <div *ngIf="isAddShift" class="menu-item menu-accordion" routerLinkActive="here show"
+        <div *ngIf="isAddShift" class="menu-item menu-accordion" routerLink="/shift/addShift" routerLinkActive="here show"
           data-kt-menu-trigger="click">
           <span class="menu-link">
             <span class="menu-bullet">
@@ -194,7 +194,7 @@
           </span>
         </div>
         <div *ngIf="isPosDetails" class="menu-item menu-accordion" routerLinkActive="here show"
-          data-kt-menu-trigger="click">
+          data-kt-menu-trigger="click" routerLink="/shift/posDetails" >
           <span class="menu-link">
             <span class="menu-bullet">
               <span class="bullet bullet-dot"></span>
